--- a/index.html
+++ b/index.html
@@ -4,6 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+
     <title>Document</title>
 </head>
 
@@ -31,13 +36,10 @@
                   <a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="#">Profile</a>
+                  <a class="nav-link" href="profile.html">Profile</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="resume.html">Resume</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#">Contact</a>
                 </li>
             </ul>
         </div>
@@ -49,10 +51,14 @@
         <div class="banner">
             <h2 class="welcome">Welcome!</h2>
         </div>
-
+        
         <div class="buttons">
-            <button class="button graphicdesign">Graphic Design</button>
-            <button class="button uxui">UX/UI Design</button>
+            <a href="index.html"><button class="button graphicdesign" type="button">Graphic Design</button></a>
+            <a href="uxui.html"><button class="button uxui" type="button">UX/UI Design</button></a>
+        </div>
+
+        <div class="subcontainer">
+            <h3 class="container">Senior Thesis</h3>
         </div>
 
         <div class="gallery">
@@ -68,23 +74,35 @@
                 <img class="imgthumbnail" src="Graphic Design/IMG_0786-01.jpg">
                 <img class="imgthumbnail" src="Graphic Design/IMG_0787-01.jpg">
             </div>
+        <div class="subcontainer">
+            <h3 class="container">Hazing Prevention Week</h3>
+        </div>
             <div class="row3">
                 <img class="imgthumbnail" src="Graphic Design/HPSquare2-01.jpg">
                 <img class="imgthumbnail" src="Graphic Design/HpSquare3.jpg">
                 <img class="imgthumbnail" src="Graphic Design/HPDigitalSignSqaure-01.jpg">
                 <img class="imgthumbnail" src="Graphic Design/HPOsquare.jpg">
             </div>
+        <div class="subcontainer">
+            <h3 class="container">Poster Designs</h3>
+        </div>
             <div class="row4">
                 <img class="imgthumbnail" src="Graphic Design/BooBashSqaure-01.jpg">
                 <img class="imgthumbnail" src="Graphic Design/Environment poster sqaure 2-01.jpg">
                 <img class="imgthumbnail" src="Graphic Design/Environment Poster Square 2-01-01.jpg">
                 <img class="imgthumbnail" src="Graphic Design/SGADebate&VoteSquare-01.jpg">
             </div>
+        <div class="subcontainer">
+            <h3 class="container">Collage</h3>
+        </div>
             <div class="row5">
                 <img class="imgthumbnail" src="Graphic Design/Alt Fibres Homework part 1.jpg">
                 <img class="imgthumbnail" src="Graphic Design/Alt Fibres Homework part 2-01.jpg">
                 <img class="imgthumbnail" src="Graphic Design/Alt Fibres Homework part 8-01.jpg">
             </div>
+        <div class="subcontainer">
+            <h3 class="container">Logo Designs</h3>
+        </div>
             <div class="row6">
                 <img class="imgthumbnail" src="Graphic Design/Logodesignday9-01.jpg">
                 <img class="imgthumbnail" src="Graphic Design/ZeldaGuide.jpg">
