--- a/resume.html
+++ b/resume.html
@@ -28,80 +28,25 @@
         <div class="pages">
             <ul class="navbar-nav mr-auto">
                 <li class="nav-item active">
-                  <a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
+                  <a class="nav-link" href="index.html">Home</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="#">Profile</a>
+                  <a class="nav-link" href="profile.html">Profile</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="resume.html">Resume</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#">Contact</a>
+                    <a class="nav-link" href="resume.html">Resume <span class="sr-only">(current)</span></a>
                 </li>
             </ul>
         </div>
     </div>
    </nav>
-
-
-   
-    
-   <!-- <div class="background">
+   <div class="background">
         <div class="banner">
-            <h2 class="welcome">Welcome!</h2>
+            <h2 class="welcome">Resume</h2>
         </div>
 
-        <div class="buttons">
-            <button class="button graphicdesign">Graphic Design</button>
-            <button class="button uxui">UX/UI Design</button>
-        </div>
-
-        <div class="gallery">
-            <div class="row1">
-                <img class="imgthumbnail" src="Graphic Design/thesis1-01.jpg">
-                <img class="imgthumbnail" src="Graphic Design/thesis2-01.jpg">
-                <img class="imgthumbnail" src="Graphic Design/thesis3-01.jpg">
-            </div>
-            <div class="row2">
-                <img class="imgthumbnail" src="Graphic Design/IMG_0782-01.jpg">
-                <img class="imgthumbnail" src="Graphic Design/IMG_0784-01.jpg">
-                <img class="imgthumbnail" src="Graphic Design/IMG_0785-01.jpg">
-                <img class="imgthumbnail" src="Graphic Design/IMG_0786-01.jpg">
-                <img class="imgthumbnail" src="Graphic Design/IMG_0787-01.jpg">
-            </div>
-            <div class="row3">
-                <img class="imgthumbnail" src="Graphic Design/HPSquare2-01.jpg">
-                <img class="imgthumbnail" src="Graphic Design/HpSquare3.jpg">
-                <img class="imgthumbnail" src="Graphic Design/HPDigitalSignSqaure-01.jpg">
-                <img class="imgthumbnail" src="Graphic Design/HPOsquare.jpg">
-            </div>
-            <div class="row4">
-                <img class="imgthumbnail" src="Graphic Design/BooBashSqaure-01.jpg">
-                <img class="imgthumbnail" src="Graphic Design/Environment poster sqaure 2-01.jpg">
-                <img class="imgthumbnail" src="Graphic Design/Environment Poster Square 2-01-01.jpg">
-                <img class="imgthumbnail" src="Graphic Design/SGADebate&VoteSquare-01.jpg">
-            </div>
-            <div class="row5">
-                <img class="imgthumbnail" src="Graphic Design/Alt Fibres Homework part 1.jpg">
-                <img class="imgthumbnail" src="Graphic Design/Alt Fibres Homework part 2-01.jpg">
-                <img class="imgthumbnail" src="Graphic Design/Alt Fibres Homework part 8-01.jpg">
-            </div>
-            <div class="row6">
-                <img class="imgthumbnail" src="Graphic Design/Logodesignday9-01.jpg">
-                <img class="imgthumbnail" src="Graphic Design/ZeldaGuide.jpg">
-                <img class="imgthumbnail" src="Graphic Design/VortexAnalytics.jpg">
-                <img class="imgthumbnail" src="Graphic Design/Designhil(1)-07.jpg">
-            </div>
-            <div class="row7">
-                <img class="imgthumbnail" src="Graphic Design/Designhil(1)-01.jpg">
-                <img class="imgthumbnail" src="Graphic Design/Designhil(1)-02.jpg">
-                <img class="imgthumbnail" src="Graphic Design/Designhil(1)-03.jpg">
-                <img class="imgthumbnail" src="Graphic Design/Designhil(1)-05.jpg">
-                <img class="imgthumbnail" src="Graphic Design/Designhil(1)-06.jpg">
-            </div>
-        </div>
-    </div>     -->
+        <img src="img/Resume2020(2).jpg" class="resume">
+    </div>  
 </body>
 <footer></footer>
 <div class="preloader">
