--- a/profile.html
+++ b/profile.html
@@ -51,6 +51,14 @@
 
         <h4 class="subtitle">Who Am I?</h4>
         <p class="para">Graphic Designer with a Bachelors in Fine Arts and a certificate in UX/UI design from Rice University. Previous experience as a graphic designer while studying at Lamar University. As a student graphic designer, created various forms of advertisement, including social media squares and banners and designed products such as T-shirts and badges, for different organizations. Skilled in Adobe Illustrator, Photoshop, InDesign and XD. Strengths lie in ability to compromise and to effectively communicate with team members and clients. Driven by passion for digital arts to remain calm under pressure and deliver visually stunning project results while ensuring deadlines are met.</p>
+
+        <h4 class="subtitle">Contact Info</h4>
+        <ul class="contact">
+            <li>Email: marina_akhter@hotmail.com</li>
+            <li>Instagram: marina96_designs</li>
+            <li>Linkedin: https://www.linkedin.com/in/marina-akhter-474584165/</li>
+        </ul>
+
     </div>  
 </body>
 <footer></footer>
