--- a/index.html
+++ b/index.html
@@ -63,59 +63,81 @@
         </div>
 
         <div class="gallery">
-            <div class="row1">
-                <img class="imgthumbnail" src="Graphic Design/thesis1-01.jpg">
-                <img class="imgthumbnail" src="Graphic Design/thesis2-01.jpg">
-                <img class="imgthumbnail" src="Graphic Design/thesis3-01.jpg">
+            <div class="row1" style="justify-content: center;">
+                <img src="Graphic Design/thesis1-01.jpg" alt="..." class="img-thumbnail w-25 h-25" style="margin: 5px;">
+                <img src="Graphic Design/thesis2-01.jpg" alt="..." class="img-thumbnail w-25 h-25" style="margin: 5px;">
+                <img src="Graphic Design/thesis3-01.jpg" alt="..." class="img-thumbnail w-25 h-25" style="margin: 5px;">
             </div>
-            <div class="row2">
-                <img class="imgthumbnail" src="Graphic Design/IMG_0782-01.jpg">
-                <img class="imgthumbnail" src="Graphic Design/IMG_0784-01.jpg">
-                <img class="imgthumbnail" src="Graphic Design/IMG_0785-01.jpg">
-                <img class="imgthumbnail" src="Graphic Design/IMG_0786-01.jpg">
-                <img class="imgthumbnail" src="Graphic Design/IMG_0787-01.jpg">
+            <div class="row2" style="justify-content: center; margin-top: 10px;">
+                <img src="Graphic Design/IMG_0782-01.jpg" alt="..." class="img-thumbnail w-25 h-25" style="margin: 5px;">
+                <img src="Graphic Design/IMG_0784-01.jpg" alt="..." class="img-thumbnail w-25 h-25" style="margin: 5px;">
+                <img src="Graphic Design/IMG_0785-01.jpg" alt="..." class="img-thumbnail w-25 h-25" style="margin: 5px;">
             </div>
+            <div class="row2" style="justify-content: center; margin-top: 10px;">
+                <img src="Graphic Design/IMG_0786-01.jpg" alt="..." class="img-thumbnail w-25 h-25" style="margin: 5px;">
+                <img src="Graphic Design/IMG_0787-01.jpg" alt="..." class="img-thumbnail w-25 h-25" style="margin: 5px;">
+            </div>
+            <div class="buttons">
+                <a href="thesis.html"><button class="button cs1" type="button">Learn More</button></a>
+            </div>
+        </div>
         <div class="subcontainer">
             <h3 class="container">Hazing Prevention Week</h3>
         </div>
             <div class="row3">
-                <img class="imgthumbnail" src="Graphic Design/HPSquare2-01.jpg">
-                <img class="imgthumbnail" src="Graphic Design/HpSquare3.jpg">
-                <img class="imgthumbnail" src="Graphic Design/HPDigitalSignSqaure-01.jpg">
-                <img class="imgthumbnail" src="Graphic Design/HPOsquare.jpg">
+                <img src="Graphic Design/HPSquare2-01.jpg" alt="..." class="img-thumbnail w-25 h-25" style="margin: 5px;">
+                <img src="Graphic Design/HpSquare3.jpg" alt="..." class="img-thumbnail w-25 h-25" style="margin: 5px;">
+            </div>
+            <div class="row3">
+                <img src="Graphic Design/HPDigitalSignSqaure-01.jpg" alt="..." class="img-thumbnail w-25 h-25" style="margin: 5px;">
+                <img src="Graphic Design/HPOsquare.jpg" alt="..." class="img-thumbnail w-25 h-25" style="margin: 5px;">
+            </div>
+            <div class="buttons">
+                <a href="#"><button class="button cs1" type="button">Learn More</button></a>
             </div>
         <div class="subcontainer">
             <h3 class="container">Poster Designs</h3>
         </div>
             <div class="row4">
-                <img class="imgthumbnail" src="Graphic Design/BooBashSqaure-01.jpg">
-                <img class="imgthumbnail" src="Graphic Design/Environment poster sqaure 2-01.jpg">
-                <img class="imgthumbnail" src="Graphic Design/Environment Poster Square 2-01-01.jpg">
-                <img class="imgthumbnail" src="Graphic Design/SGADebate&VoteSquare-01.jpg">
+                <img src="Graphic Design/BooBashSqaure-01.jpg" alt="..." class="img-thumbnail w-25 h-25" style="margin: 5px;">
+                <img src="Graphic Design/Environment poster sqaure 2-01.jpg" alt="..." class="img-thumbnail w-25 h-25" style="margin: 5px;">
+                <img src="Graphic Design/Environment Poster Square 2-01-01.jpg" alt="..." class="img-thumbnail w-25 h-25" style="margin: 5px;">
+                <img src="Graphic Design/SGADebate&VoteSquare-01.jpg" alt="..." class="img-thumbnail w-25 h-25" style="margin: 5px;">
+            </div>
+            <div class="buttons">
+                <a href="#"><button class="button cs1" type="button">Learn More</button></a>
             </div>
         <div class="subcontainer">
             <h3 class="container">Collage</h3>
         </div>
             <div class="row5">
-                <img class="imgthumbnail" src="Graphic Design/Alt Fibres Homework part 1.jpg">
-                <img class="imgthumbnail" src="Graphic Design/Alt Fibres Homework part 2-01.jpg">
-                <img class="imgthumbnail" src="Graphic Design/Alt Fibres Homework part 8-01.jpg">
+                <img src="Graphic Design/Alt Fibres Homework part 1.jpg" alt="..." class="img-thumbnail w-25 h-25" style="margin: 5px;">
+                <img src="Graphic Design/Alt Fibres Homework part 2-01.jpg" alt="..." class="img-thumbnail w-25 h-25" style="margin: 5px;">
+                <img src="Graphic Design/Alt Fibres Homework part 8-01.jpg" alt="..." class="img-thumbnail w-25 h-25" style="margin: 5px;">
+            </div>
+            <div class="buttons">
+                <a href="#"><button class="button cs1" type="button">Learn More</button></a>
             </div>
         <div class="subcontainer">
             <h3 class="container">Logo Designs</h3>
         </div>
             <div class="row6">
-                <img class="imgthumbnail" src="Graphic Design/Logodesignday9-01.jpg">
-                <img class="imgthumbnail" src="Graphic Design/ZeldaGuide.jpg">
-                <img class="imgthumbnail" src="Graphic Design/VortexAnalytics.jpg">
-                <img class="imgthumbnail" src="Graphic Design/Designhil(1)-07.jpg">
+                <img src="Graphic Design/Logodesignday9-01.jpg" alt="..." class="img-thumbnail w-25 h-25" style="margin: 5px;">
+                <img src="Graphic Design/ZeldaGuide.jpg" alt="..." class="img-thumbnail w-25 h-25" style="margin: 5px;">
+                <img src="Graphic Design/VortexAnalytics.jpg" alt="..." class="img-thumbnail w-25 h-25" style="margin: 5px;">
+            </div>
+            <div class="row6">
+                <img src="Graphic Design/Designhil(1)-07.jpg" alt="..." class="img-thumbnail w-25 h-25" style="margin: 5px;">
+                <img src="Graphic Design/Designhil(1)-01.jpg" alt="..." class="img-thumbnail w-25 h-25" style="margin: 5px;">
+                <img src="Graphic Design/Designhil(1)-02.jpg" alt="..." class="img-thumbnail w-25 h-25" style="margin: 5px;">
             </div>
             <div class="row7">
-                <img class="imgthumbnail" src="Graphic Design/Designhil(1)-01.jpg">
-                <img class="imgthumbnail" src="Graphic Design/Designhil(1)-02.jpg">
-                <img class="imgthumbnail" src="Graphic Design/Designhil(1)-03.jpg">
-                <img class="imgthumbnail" src="Graphic Design/Designhil(1)-05.jpg">
-                <img class="imgthumbnail" src="Graphic Design/Designhil(1)-06.jpg">
+                <img src="Graphic Design/Designhil(1)-03.jpg" alt="..." class="img-thumbnail w-25 h-25" style="margin: 5px;">
+                <img src="Graphic Design/Designhil(1)-05.jpg" alt="..." class="img-thumbnail w-25 h-25" style="margin: 5px;">
+                <img src="Graphic Design/Designhil(1)-06.jpg" alt="..." class="img-thumbnail w-25 h-25" style="margin: 5px;">
+            </div>
+            <div class="buttons">
+                <a href="#"><button class="button cs1" type="button">Learn More</button></a>
             </div>
         </div>
     </div>    
