--- a/profile.html
+++ b/profile.html
@@ -9,7 +9,7 @@
 
 <body>
    <nav class="navbar navbar-expand-lg navbar-light customNav" id="nav">
-    <a class="logo" href="#"><img src="Graphic Design/Newlogo-13.png" class="logo"></a>
+    <a class="logo" href="#"><img src="Graphic Design/Newlogo2-07.png" class="logo"></a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
       aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
