--- a/thesis.html
+++ b/thesis.html
@@ -49,19 +49,24 @@
 
     
    <div class="background">
-        <div class="banner">
-            <h2 class="welcome">Welcome!</h2>
-        </div>
-        
         <div class="buttons">
-            <a href="index.html"><button class="button graphicdesign" type="button">Graphic Design</button></a>
-            <a href="uxui.html"><button class="button uxui" type="button">UX/UI Design</button></a>
+            <a href="index.html"><button class="button cs1" type="button">Back</button></a>
         </div>
 
-        <div class="subcontainer">
-            <h3 class="container">Senior Thesis</h3>
-            <p>Description: During my final semester in college I had to work on my Senior Thesis. For this I came up with my own fictional company called "By Heart", which sells products that has Pakistani designs. This was one of my favorite projects to work on because I was able to showcase my Pakistani background and stylist influences</p>
+        <div class="subbackground">
+            <h3 class="container" style="margin-top: 15px;">Senior Thesis</h3>
+            <br>
+            <p class="para">Description: During my final semester in college I had to work on my Senior Thesis. For this I came up with my own fictional company called "By Heart", which sells products that has Pakistani designs. This was one of my favorite projects to work on because I was able to showcase my Pakistani background and stylist influences</p>
+        </div>
 
+        <div class="d-flex flex-row-reverse bd-highlight">
+            <div class="container4">
+                <div class="d-flex align-items-start flex-column bd-highlight mb-3 a-btext" style="height: 200px;">
+                    <div class="p-2 bd-highlight title subtitle2">Badshahi Mosque</div>
+                    <div class="p-2 bd-highlight title2 para2">This is a digital design created on Adobe Illustrator and printed on a canvas. The Badshahi Mosque is a mosque located in Lahore, Pakistan. The reason I chose this mosque to design for my canvas is due to my personal memories of visiting this place during a school trip to Lahore.</div>
+                </div> 
+            </div>
+            <div class="p-2 bd-highlight"><img src="Graphic Design/thesis design 1(S Print)-01_original.jpg" style="width: 400px; margin-left: 30px; border: solid black 1px;"></div>
         </div>
 
     </div>    
