--- a/thesis.html
+++ b/thesis.html
@@ -56,19 +56,88 @@
         <div class="subbackground">
             <h3 class="container" style="margin-top: 15px;">Senior Thesis</h3>
             <br>
-            <p class="para">Description: During my final semester in college I had to work on my Senior Thesis. For this I came up with my own fictional company called "By Heart", which sells products that has Pakistani designs. This was one of my favorite projects to work on because I was able to showcase my Pakistani background and stylist influences</p>
+            <p class="para">Description: During my final semester in college I had to work on my Senior Thesis. For this I came up with my own fictional company called "By Heart", which sells products that has Pakistani designs. This was one of my favorite projects to work on because I was able to showcase my Pakistani background and stylist influences. The subjects in each designs were chosen based on my personal memories from Pakistan</p>
         </div>
 
         <div class="d-flex flex-row-reverse bd-highlight">
             <div class="container4">
                 <div class="d-flex align-items-start flex-column bd-highlight mb-3 a-btext" style="height: 200px;">
                     <div class="p-2 bd-highlight title subtitle2">Badshahi Mosque</div>
-                    <div class="p-2 bd-highlight title2 para2">This is a digital design created on Adobe Illustrator and printed on a canvas. The Badshahi Mosque is a mosque located in Lahore, Pakistan. The reason I chose this mosque to design for my canvas is due to my personal memories of visiting this place during a school trip to Lahore.</div>
+                    <div class="p-2 bd-highlight title2 para2">This canvas portrays the Badshahi Mosque which is located in Lahore, Pakistan. Using Adobe Illustrator, I traced the outline of the mosque from a photo and then filled the image with colors that were harmonious to the brand of the company</div>
                 </div> 
             </div>
-            <div class="p-2 bd-highlight"><img src="Graphic Design/thesis design 1(S Print)-01_original.jpg" style="width: 400px; margin-left: 30px; border: solid black 1px;"></div>
+            <div class="p-2 bd-highlight"><img src="Graphic Design/thesis design 1(S Print)-01_original.jpg" style="width: 400px; margin-left: 30px; border: solid black 2px;"></div>
         </div>
 
+        <div class="d-flex flex-row-reverse bd-highlight">
+            <div class="container4">
+                <div class="d-flex align-items-start flex-column bd-highlight mb-3 a-btext" style="height: 200px;">
+                    <div class="p-2 bd-highlight title subtitle2">Qawali</div>
+                    <div class="p-2 bd-highlight title2 para2">This canvas portrays a Qawali, which is a musical performance of Sufi Muslim Poetry. The people and the intruments in this image were traced from an picture I obtained from the internet. I added colors from my selected color palette.</div>
+                </div> 
+            </div>
+            <div class="p-2 bd-highlight"><img src="Graphic Design/thesis wall descor (2)(R) [Recovered]-01_original.jpg" style="width: 400px; margin-left: 30px; border: solid black 2px;"></div>
+        </div>
+
+        <div class="d-flex flex-row-reverse bd-highlight">
+            <div class="container4">
+                <div class="d-flex align-items-start flex-column bd-highlight mb-3 a-btext" style="height: 200px;">
+                    <div class="p-2 bd-highlight title subtitle2">Makai Wala</div>
+                    <div class="p-2 bd-highlight title2 para2">This canvas portrays a cart of a 'Makai Wala' or a corn seller. This was created using Adobe Illustrator. The background pattern was inspired by a wall tile design found in Pakistan.</div>
+                </div> 
+            </div>
+            <div class="p-2 bd-highlight"><img src="Graphic Design/Thesis wall decor (3)(Print)-01_original.jpg" style="width: 400px; margin-left: 30px; border: solid black 2px;"></div>
+        </div>
+
+        <div class="d-flex flex-row-reverse bd-highlight">
+            <div class="container4">
+                <div class="d-flex align-items-start flex-column bd-highlight mb-3 a-btext" style="height: 200px;">
+                    <div class="p-2 bd-highlight title subtitle2">Pakistani Truck Art</div>
+                    <div class="p-2 bd-highlight title2 para2">This is a sticker of a Pakistani truck. These trucks function the same as a bus or a shuttle. In Pakistan, it is quite common to see these trucks decorated with bright colors and interesting patterns.</div>
+                </div> 
+            </div>
+            <div class="p-2 bd-highlight"><img src="Graphic Design/IMG_0785-01.jpg" style="width: 400px; margin-left: 30px; border: solid black 2px;"></div>
+        </div>
+
+        <div class="d-flex flex-row-reverse bd-highlight">
+            <div class="container4">
+                <div class="d-flex align-items-start flex-column bd-highlight mb-3 a-btext" style="height: 200px;">
+                    <div class="p-2 bd-highlight title subtitle2">Rickshaw</div>
+                    <div class="p-2 bd-highlight title2 para2">This is a sticker of a Rickshaw, a three wheeled vehicle in Pakistan used for taxi services. The colors and patterns on the vehicle is used to protray the mosaic type of artwork commonly found in Pakistan. This was created using Adobe Illustrator.</div>
+                </div> 
+            </div>
+            <div class="p-2 bd-highlight"><img src="Graphic Design/IMG_0782-01.jpg" style="width: 400px; margin-left: 30px; border: solid black 2px;"></div>
+        </div>
+
+        <div class="d-flex flex-row-reverse bd-highlight">
+            <div class="container4">
+                <div class="d-flex align-items-start flex-column bd-highlight mb-3 a-btext" style="height: 200px;">
+                    <div class="p-2 bd-highlight title subtitle2">Cricket Bat</div>
+                    <div class="p-2 bd-highlight title2 para2">This is a sticker of a cricket bat. Cricket is a popular sport in Pakistan. The design was created using Adobe Illustrator.</div>
+                </div> 
+            </div>
+            <div class="p-2 bd-highlight"><img src="Graphic Design/IMG_0784-01.jpg" style="width: 400px; margin-left: 30px; border: solid black 2px;"></div>
+        </div>
+
+        <div class="d-flex flex-row-reverse bd-highlight">
+            <div class="container4">
+                <div class="d-flex align-items-start flex-column bd-highlight mb-3 a-btext" style="height: 200px;">
+                    <div class="p-2 bd-highlight title subtitle2">Rooh Afza</div>
+                    <div class="p-2 bd-highlight title2 para2">This is a sticker of Rooh Afza. Rooh Afza is a sweet rose scented syrup used for beverages. It is traditionally served during Iftar in the month of Ramadan. The design was created using Adobe Illustrator.</div>
+                </div> 
+            </div>
+            <div class="p-2 bd-highlight"><img src="Graphic Design/IMG_0786-01.jpg" style="width: 400px; margin-left: 30px; border: solid black 2px;"></div>
+        </div>
+
+        <div class="d-flex flex-row-reverse bd-highlight">
+            <div class="container4">
+                <div class="d-flex align-items-start flex-column bd-highlight mb-3 a-btext" style="height: 200px;">
+                    <div class="p-2 bd-highlight title subtitle2">Mango</div>
+                    <div class="p-2 bd-highlight title2 para2">This is a sticker design of a mango, is fruit that is common in Pakistan. This was created using Adobe Illustrator.</div>
+                </div> 
+            </div>
+            <div class="p-2 bd-highlight"><img src="Graphic Design/IMG_0787-01.jpg" style="width: 400px; margin-left: 30px; border: solid black 2px;"></div>
+        </div>
     </div>    
 </body>
 <footer></footer>
