--- a/uxui.html
+++ b/uxui.html
@@ -13,17 +13,24 @@
 </head>
 
 <body>
-   <nav class="navbar navbar-expand-lg navbar-light customNav" id="nav">
-    <a class="logo" href="#"><img src="Graphic Design/Newlogo2-07.png" class="logo"></a>
+
+  <div class="background3">
+    <div class="mainheader">
+        <a class="logo" href="#"><img src="Graphic Design/Newlogo2-07.png" class="logo"></a>
+        <h1 class="title">Marina Akhter</h1>
+    </div>
+  </div>
+
+  <nav class="navbar navbar-expand-lg navbar-light customNav" id="nav">
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
       aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <div class="pages">
-            <ul class="navbar-nav mr-auto">
+            <ul class="navbar-nav">
                 <li class="nav-item active">
-                  <a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
+                  <a class="nav-link" href="index.html">Home</a>
                 </li>
                 <li class="nav-item">
                   <a class="nav-link" href="profile.html">Profile</a>
@@ -34,26 +41,38 @@
             </ul>
         </div>
     </div>
-   </nav>
+  </nav>
 
-    
-   <div class="background">
-        <div class="banner">
-            <h2 class="welcome">Welcome!</h2>
-        </div>
-        
-        <div class="buttons">
-            <a href="index.html"><button class="button graphicdesign2" type="button">Graphic Design</button></a>
-            <a href="uxui.html"><button class="button uxui2" type="button">UX/UI Design</button></a>
+<div class="background">
+    <div class="background2">
+        <div style="display: flex; justify-content: center; padding: 10px;">
+          <a href="index.html"><img src="img/Buttonlogo-12.png" style="width: 120px; margin: 5px;" class="zoom"></a>
+          <a href="uxui.html"><img src="img/Buttonlogo-13.png" style="width: 120px; margin: 5px;"></a>
         </div>
 
-        <div class="jumbotron wdp"></div>
-
-        <div class="buttons">
-            <a href="case1.html"><button class="button cs1" type="button">View More</button></a>
+        <div class="cards1">
+          <div class="card-deck w-50 h-100">
+              <div class="card">
+                  <img src="Graphic Design/WDPlogo-24.jpg" class="card-img-top" alt="...">
+                  <div class="card-body" style="background-color: black;">
+                      <h5 class="card-title" style="text-align: center;"><a href="case1.html" style="color: white; font-size: 16px;">Workers Defense Project Redesign</a></h5>
+                  </div>
+              </div>
+          </div>
         </div>
 
-    </div>    
+        <div class="cards2">
+          <div class="card-deck w-50 h-100">
+            <div class="card">
+                <img src="Graphic Design/RRLogo-05.jpg" class="card-img-top" alt="...">
+                <div class="card-body" style="background-color: black;">
+                    <h5 class="card-title" style="text-align: center;"><a href="#" style="color: white; font-size: 16px;">Recipe Roulette</a></h5>
+                </div>
+            </div>
+          </div>
+          </div>
+    </div>
+</div>
 </body>
 <footer></footer>
 <div class="preloader">
