--- a/index.html
+++ b/index.html
@@ -23,18 +23,22 @@
 </head>
 
 <body>
-
+    <div class="background3">
+        <div class="mainheader">
+            <a class="logo" href="#"><img src="Graphic Design/Newlogo2-07.png" class="logo"></a>
+            <h1 class="title">Marina Akhter</h1>
+        </div>
+    </div>
    <nav class="navbar navbar-expand-lg navbar-light customNav" id="nav">
-    <a class="logo" href="#"><img src="Graphic Design/Newlogo2-07.png" class="logo"></a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
       aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <div class="pages">
-            <ul class="navbar-nav mr-auto">
+            <ul class="navbar-nav">
                 <li class="nav-item active">
-                  <a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
+                  <a class="nav-link" href="index.html">Home</a>
                 </li>
                 <li class="nav-item">
                   <a class="nav-link" href="profile.html">Profile</a>
@@ -47,8 +51,64 @@
     </div>
    </nav>
 
+    <div class="background">
+        <div class="background2">
+            <div style="display: flex; justify-content: center; padding: 10px;">
+                <a href="index.html"><img src="img/Buttonlogo-12.png" style="width: 120px; margin: 5px;"></a>
+                <a href="uxui.html"><img src="img/Buttonlogo-13.png" style="width: 120px; margin: 5px;" class="zoom"></a>
+            </div>
+
+            <div class="cards1">
+                <div class="card-deck w-25 h-25">
+                    <div class="card">
+                        <img src="Graphic Design/thesis1-01.jpg" class="card-img-top" alt="...">
+                        <div class="card-body" style="background-color: black;">
+                            <h5 class="card-title" style="text-align: center;"><a href="thesis.html" style="color: white; font-size: 16px;">Senior Thesis</a></h5>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="card-deck w-25 h-25">
+                    <div class="card">
+                        <img src="Graphic Design/HpSquare3.jpg" class="card-img-top" alt="...">
+                        <div class="card-body" style="background-color: black;">
+                            <h5 class="card-title" style="text-align: center;"><a href="#" style="color: white; font-size: 16px;">Hazing Prevention</a></h5>
+                        </div>
+                    </div>
+                </div> 
+                
+                <div class="card-deck w-25 h-25">
+                    <div class="card">
+                        <img src="Graphic Design/Environment Poster Square 2-01-01.jpg" class="card-img-top" alt="...">
+                        <div class="card-body" style="background-color: black;">
+                            <h5 class="card-title" style="text-align: center;"><a href="#" style="color: white; font-size: 16px;">Environmental Posters</a></h5>
+                        </div>
+                    </div>
+                </div>    
+            </div>
+            <div class="cards2">
+                <div class="card-deck w-25 h-25">
+                    <div class="card">
+                        <img src="Graphic Design/Alt Fibres Homework part 1.jpg" class="card-img-top" alt="...">
+                        <div class="card-body" style="background-color: black;">
+                            <h5 class="card-title" style="text-align: center;"><a href="#" style="color: white; font-size: 16px;">Collage</a></h5>
+                        </div>
+                    </div>
+                </div>    
+
+                <div class="card-deck w-25 h-25">
+                    <div class="card">
+                        <img src="Graphic Design/Designhil(1)-01.jpg" class="card-img-top" alt="...">
+                        <div class="card-body" style="background-color: black;">
+                            <h5 class="card-title" style="text-align: center;"><a href="#" style="color: white; font-size: 16px;">Logo Designs</a></h5>
+                        </div>
+                    </div>
+                </div>    
+            </div>
+        </div>
+    </div>
     
-   <div class="background">
+    <!--<div class="background">
         <div class="banner">
             <h2 class="welcome">Welcome!</h2>
         </div>
@@ -140,7 +200,7 @@
                 <a href="#"><button class="button cs1" type="button">Learn More</button></a>
             </div>
         </div>
-    </div>    
+    </div>-->    
 </body>
 <footer></footer>
 <div class="preloader">
