--- a/profile.html
+++ b/profile.html
@@ -8,20 +8,25 @@
 </head>
 
 <body>
+    <div class="background3">
+        <div class="mainheader">
+            <a class="logo" href="#"><img src="Graphic Design/Newlogo2-07.png" class="logo"></a>
+            <h1 class="title">Profile</h1>
+        </div>
+    </div>
    <nav class="navbar navbar-expand-lg navbar-light customNav" id="nav">
-    <a class="logo" href="#"><img src="Graphic Design/Newlogo2-07.png" class="logo"></a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
       aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <div class="pages">
-            <ul class="navbar-nav mr-auto">
-                <li class="nav-item active">
+            <ul class="navbar-nav">
+                <li class="nav-item">
                   <a class="nav-link" href="index.html">Home</a>
                 </li>
-                <li class="nav-item">
-                  <a class="nav-link" href="profile.html">Profile <span class="sr-only">(current)</span></a>
+                <li class="nav-item active">
+                  <a class="nav-link" href="profile.html">Profile</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="resume.html">Resume</a>
@@ -30,27 +35,26 @@
         </div>
     </div>
    </nav>
+
     <div class="background">
-        <div class="banner">
-            <h2 class="welcome">Profile</h2>
-        </div>
+        <div class="background2">
+            <div class="jumbotron">
+                <img src="img/IMG_1229.jpg" class="profilepic">
+            </div>
 
-        <div class="jumbotron">
-            <img src="img/IMG_1229.jpg" class="profilepic">
-        </div>
+            <div>
+                <h4 class="subtitle">Who Am I?</h4>
+                <p class="para">Graphic Designer with a Bachelors in Fine Arts and a certificate in UX/UI design from Rice University. Previous experience as a graphic designer while studying at Lamar University. As a student graphic designer, created various forms of advertisement, including social media squares and banners and designed products such as T-shirts and badges, for different organizations. Skilled in Adobe Illustrator, Photoshop, InDesign and XD. Strengths lie in ability to compromise and to effectively communicate with team members and clients. Driven by passion for digital arts to remain calm under pressure and deliver visually stunning project results while ensuring deadlines are met.</p>
+            </div>
 
-        <div class="container2">
-            <h4 class="subtitle">Who Am I?</h4>
-            <p class="para">Graphic Designer with a Bachelors in Fine Arts and a certificate in UX/UI design from Rice University. Previous experience as a graphic designer while studying at Lamar University. As a student graphic designer, created various forms of advertisement, including social media squares and banners and designed products such as T-shirts and badges, for different organizations. Skilled in Adobe Illustrator, Photoshop, InDesign and XD. Strengths lie in ability to compromise and to effectively communicate with team members and clients. Driven by passion for digital arts to remain calm under pressure and deliver visually stunning project results while ensuring deadlines are met.</p>
-        </div>
-
-        <div class="container3">
-            <h4 class="subtitle">Contact Info</h4>
-            <ul class="contact">
-                <li>Email: marina_akhter@hotmail.com</li>
-                <li>Instagram: marina96_designs</li>
-                <li>Linkedin: https://www.linkedin.com/in/marina-akhter-474584165/</li>
-            </ul>
+            <div>
+                <h4 class="subtitle">Contact Info</h4>
+                <ul class="contact">
+                    <li>Email: marina_akhter@hotmail.com</li>
+                    <li>Instagram: marina96_designs</li>
+                    <li>Linkedin: https://www.linkedin.com/in/marina-akhter-474584165/</li>
+                </ul>
+            </div>
         </div>
     </div>  
 </body>
