--- a/resume.html
+++ b/resume.html
@@ -18,35 +18,39 @@
        </div>
    </div>-->
 
-   <nav class="navbar navbar-expand-lg navbar-light customNav" id="nav">
-    <a class="logo" href="#"><img src="Graphic Design/Newlogo2-07.png" class="logo"></a>
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
-      aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
-    <div class="collapse navbar-collapse" id="navbarSupportedContent">
-        <div class="pages">
-            <ul class="navbar-nav mr-auto">
-                <li class="nav-item active">
-                  <a class="nav-link" href="index.html">Home</a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link" href="profile.html">Profile</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="resume.html">Resume <span class="sr-only">(current)</span></a>
-                </li>
-            </ul>
+   <div class="background3">
+        <div class="mainheader">
+            <a class="logo" href="#"><img src="Graphic Design/Newlogo2-07.png" class="logo"></a>
+            <h1 class="title">Resume</h1>
         </div>
     </div>
-   </nav>
-   <div class="background">
-        <div class="banner">
-            <h2 class="welcome">Resume</h2>
+    <nav class="navbar navbar-expand-lg navbar-light customNav" id="nav">
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
+            aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <div class="pages">
+                <ul class="navbar-nav">
+                    <li class="nav-item">
+                        <a class="nav-link" href="index.html">Home</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="profile.html">Profile</a>
+                    </li>
+                    <li class="nav-item active">
+                        <a class="nav-link" href="resume.html">Resume</a>
+                    </li>
+                </ul>
+            </div>
         </div>
+    </nav>
 
-        <img src="img/Resume2020(2).jpg" class="resume">
-    </div>  
+    <div class="background">
+        <div class="background2">
+            <img src="img/Resume2020(2).jpg" class="resume" style="width: 75%; display: block; margin-left: auto; margin-right: auto;">
+        </div>
+    </div> 
 </body>
 <footer></footer>
 <div class="preloader">
