--- a/thesis.html
+++ b/thesis.html
@@ -55,6 +55,9 @@
     
     <div class="background">
         <div class="background2">
+            <div style="display: flex; justify-content: center; padding: 10px;">
+                <a href="index.html"><img src="Graphic Design/Backbutton-16.png" style="width: 120px; margin: 5px;" class="zoom"></a>
+            </div>
 
             <div class="subbackground">
                 <h3 class="container" style="margin-top: 15px;">Senior Thesis</h3>
