--- a/uxui.html
+++ b/uxui.html
@@ -47,12 +47,12 @@
     <div class="background2">
         <div style="display: flex; justify-content: center; padding: 10px;">
           <a href="index.html"><img src="img/Buttonlogo-12.png" style="width: 120px; margin: 5px;" class="zoom"></a>
-          <a href="uxui.html"><img src="img/Buttonlogo-13.png" style="width: 120px; margin: 5px;"></a>
+          <a href="#"><img src="img/Buttonlogo-13.png" style="width: 120px; margin: 5px;"></a>
         </div>
 
         <div class="cards1">
           <div class="card-deck w-50 h-100">
-              <div class="card">
+              <div class="card" style="border: black solid 3px; margin-top: 15px; margin-bottom: 15px;">
                   <img src="Graphic Design/WDPlogo-24.jpg" class="card-img-top" alt="...">
                   <div class="card-body" style="background-color: black;">
                       <h5 class="card-title" style="text-align: center;"><a href="case1.html" style="color: white; font-size: 16px;">Workers Defense Project Redesign</a></h5>
@@ -63,7 +63,7 @@
 
         <div class="cards2">
           <div class="card-deck w-50 h-100">
-            <div class="card">
+            <div class="card" style="border: black solid 3px; margin-top: 15px; margin-bottom: 15px;">
                 <img src="Graphic Design/RRLogo-05.jpg" class="card-img-top" alt="...">
                 <div class="card-body" style="background-color: black;">
                     <h5 class="card-title" style="text-align: center;"><a href="#" style="color: white; font-size: 16px;">Recipe Roulette</a></h5>
