--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 
             <div class="cards1">
                 <div class="card-deck w-25 h-25">
-                    <div class="card">
+                    <div class="card" style="border: black solid 3px;">
                         <img src="Graphic Design/thesis1-01.jpg" class="card-img-top" alt="...">
                         <div class="card-body" style="background-color: black;">
                             <h5 class="card-title" style="text-align: center;"><a href="thesis.html" style="color: white; font-size: 16px;">Senior Thesis</a></h5>
@@ -69,7 +69,7 @@
                 </div>
 
                 <div class="card-deck w-25 h-25">
-                    <div class="card">
+                    <div class="card" style="border: black solid 3px;">
                         <img src="Graphic Design/HpSquare3.jpg" class="card-img-top" alt="...">
                         <div class="card-body" style="background-color: black;">
                             <h5 class="card-title" style="text-align: center;"><a href="#" style="color: white; font-size: 16px;">Hazing Prevention</a></h5>
@@ -78,7 +78,7 @@
                 </div> 
                 
                 <div class="card-deck w-25 h-25">
-                    <div class="card">
+                    <div class="card" style="border: black solid 3px;">
                         <img src="Graphic Design/Environment Poster Square 2-01-01.jpg" class="card-img-top" alt="...">
                         <div class="card-body" style="background-color: black;">
                             <h5 class="card-title" style="text-align: center;"><a href="#" style="color: white; font-size: 16px;">Environmental Posters</a></h5>
@@ -86,9 +86,9 @@
                     </div>
                 </div>    
             </div>
-            <div class="cards2">
+            <div class="cards2" style="margin-top: 40px;">
                 <div class="card-deck w-25 h-25">
-                    <div class="card">
+                    <div class="card" style="border: black solid 3px;">
                         <img src="Graphic Design/Alt Fibres Homework part 1.jpg" class="card-img-top" alt="...">
                         <div class="card-body" style="background-color: black;">
                             <h5 class="card-title" style="text-align: center;"><a href="#" style="color: white; font-size: 16px;">Collage</a></h5>
@@ -97,7 +97,7 @@
                 </div>    
 
                 <div class="card-deck w-25 h-25">
-                    <div class="card">
+                    <div class="card" style="border: black solid 3px;">
                         <img src="Graphic Design/Designhil(1)-01.jpg" class="card-img-top" alt="...">
                         <div class="card-body" style="background-color: black;">
                             <h5 class="card-title" style="text-align: center;"><a href="#" style="color: white; font-size: 16px;">Logo Designs</a></h5>
