--- a/resume.html
+++ b/resume.html
@@ -48,7 +48,7 @@
 
     <div class="background">
         <div class="background2">
-            <img src="img/Resume2020(2).jpg" class="resume" style="width: 75%; display: block; margin-left: auto; margin-right: auto;">
+            <img src="img/Resume2020(2).jpg" class="resume" style="width: 75%; display: block; margin-left: auto; margin-right: auto; border: solid black 1px;">
         </div>
     </div> 
 </body>
