--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
             </div>
 
             <div style="display: flex; flex-direction: row; justify-content: center;">
-                <img src="Graphic Design/portfoliobutton-18.png" style="width: 250px; height: 250px; margin: 20px;" class="zoom2">
+                <a href="thesis.html"><img src="Graphic Design/portfoliobutton-18.png" style="width: 250px; height: 250px; margin: 20px;" class="zoom2"></a>
                 <img src="Graphic Design/portfoliobutton-19.png" style="width: 250px; height: 250px; margin: 20px;" class="zoom2">
                 <img src="Graphic Design/portfoliobutton-20.png" style="width: 250px; height: 250px; margin: 20px;" class="zoom2">
             </div>
