--- a/thesis.html
+++ b/thesis.html
@@ -62,7 +62,7 @@
             <div class="subbackground">
                 <h3 class="container" style="margin-top: 15px;">Senior Thesis</h3>
                 <br>
-                <p class="para">Description: During my final semester in college I had to work on my Senior Thesis. For this I came up with my own fictional company called "By Heart", which sells products that has Pakistani designs. This was one of my favorite projects to work on because I was able to showcase my Pakistani background and stylist influences. The subjects in each designs were chosen based on my personal memories from Pakistan</p>
+                <p style="color: white; font-size: 20px; line-height: 40px;">Description: During my final semester in college I had to work on my Senior Thesis. For this I came up with my own fictional company called "By Heart", which sells products that has Pakistani designs. This was one of my favorite projects to work on because I was able to showcase my Pakistani background and stylist influences. The subjects in each designs were chosen based on my personal memories from Pakistan</p>
             </div>
 
             <div class="d-flex flex-row-reverse bd-highlight">
