--- a/thesis.html
+++ b/thesis.html
@@ -72,6 +72,7 @@
                         <div class="d-flex align-items-start flex-column bd-highlight mb-3 a-btext" style="height: 200px;">
                             <div class="p-2 bd-highlight subtitle2">Badshahi Mosque</div>
                             <div class="p-2 bd-highlight title2 para2">This canvas portrays the Badshahi Mosque which is located in Lahore, Pakistan. Using Adobe Illustrator, I traced the outline of the mosque from a photo and then filled the image with colors that were harmonious to the brand of the company</div>
+                            <div class="p-2 bd-highlight title2 para2">To learn more about the Badshahi Mosque <a href="http://www.sacred-destinations.com/pakistan/lahore-badshahi-mosque" target="_blank">click here</a></div>
                         </div> 
                     </div>
                 </div>
@@ -84,6 +85,7 @@
                         <div class="d-flex align-items-start flex-column bd-highlight mb-3 a-btext" style="height: 200px;">
                             <div class="p-2 bd-highlight subtitle2">Qawali</div>
                             <div class="p-2 bd-highlight title2 para2">This canvas portrays a Qawali, which is a musical performance of Sufi Muslim Poetry. The people and the intruments in this image were traced from an picture I obtained from the internet. I added colors from my selected color palette.</div>
+                            <div class="p-2 bd-highlight title2 para2"> To learn more about Qawali <a href="https://www.bbc.co.uk/programmes/articles/5Plm8bBlBd7wXjZN2zdb8Fm/a-beginners-guide-to-qawwali-music" target="_blank">click here</a></div>
                         </div> 
                     </div>
                 </div>
@@ -95,7 +97,8 @@
                     <div class="container4">
                         <div class="d-flex align-items-start flex-column bd-highlight mb-3 a-btext" style="height: 200px;">
                             <div class="p-2 bd-highlight subtitle2">Makai Wala</div>
-                            <div class="p-2 bd-highlight title2 para2">This canvas portrays a cart of a 'Makai Wala' or a corn seller. This was created using Adobe Illustrator. The background pattern was inspired by a wall tile design found in Pakistan.</div>
+                            <div class="p-2 bd-highlight title2 para2">This canvas portrays a cart of a 'Makai Wala' or a corn seller. In Karachi, there are usually Makai Walas near stores or schools. This was created using Adobe Illustrator. The background pattern was inspired by a wall tile design found in Pakistan.</div>
+                            <div class="p-2 bd-highlight title2 para2">To learn more about how a Makai Wala does their work <a href="https://youtu.be/j9nSw2wNXEg" target="_blank">click here</a></div>
                         </div> 
                     </div>
                 </div>
@@ -107,7 +110,8 @@
                     <div class="container4">
                         <div class="d-flex align-items-start flex-column bd-highlight mb-3 a-btext" style="height: 200px;">
                             <div class="p-2 bd-highlight subtitle2">Pakistani Truck Art</div>
-                            <div class="p-2 bd-highlight title2 para2">This is a sticker of a Pakistani truck. These trucks function the same as a bus or a shuttle. In Pakistan, it is quite common to see these trucks decorated with bright colors and interesting patterns.</div>
+                            <div class="p-2 bd-highlight title2 para2">This is a sticker of a Pakistani truck. These trucks function the same as a bus or a shuttle. In Pakistan, it is quite common to see these trucks decorated with bright colors and interesting patterns. These designs are a part of my inspiration when creating digital designs</div>
+                            <div class="p-2 bd-highlight title2 para2">To learn more about truck arts <a href="https://fatimazahrahassan.com/category/truck-art-from-pakistan/" target="_blank">click here</a></div>
                         </div> 
                     </div>
                 </div>
