--- a/profile.html
+++ b/profile.html
@@ -43,22 +43,57 @@
             </div>
 
             <div>
-                <h4 style="font-size: 40px; margin-left: 30px; margin-right: 35px; margin-top: 30px; color: white;">Who Am I?</h4>
-                <p style="font-size: 18px; margin-left: 30px; margin-right: 70px; line-height: 35px; color: white;">Graphic Designer with a Bachelors in Fine Arts and a certificate in UX/UI design from Rice University. Previous experience as a graphic designer while studying at Lamar University. As a student graphic designer, created various forms of advertisement, including social media squares and banners and designed products such as T-shirts and badges, for different organizations. Skilled in Adobe Illustrator, Photoshop, InDesign and XD. Strengths lie in ability to compromise and to effectively communicate with team members and clients. Driven by passion for digital arts to remain calm under pressure and deliver visually stunning project results while ensuring deadlines are met.</p>
+                <h4 style="font-size: 40px; margin-left: 30px; margin-right: 35px; margin-top: 30px; color: black;">Who Am I?</h4>
+                <p style="font-size: 18px; margin-left: 30px; margin-right: 70px; line-height: 35px; color: black;">Graphic Designer with a Bachelors in Fine Arts and a certificate in UX/UI design from Rice University. Previous experience as a graphic designer while studying at Lamar University. As a student graphic designer, created various forms of advertisement, including social media squares and banners and designed products such as T-shirts and badges, for different organizations. Skilled in Adobe Illustrator, Photoshop, InDesign and XD. Strengths lie in ability to compromise and to effectively communicate with team members and clients. Driven by passion for digital arts to remain calm under pressure and deliver visually stunning project results while ensuring deadlines are met.</p>
             </div>
 
             <div>
-                <h4 style="font-size: 40px; margin-left: 30px; color: white; margin-top: 55px;">Contact Info</h4>
-                <ul style="font-size: 18px; margin-left: 30px; line-height: 35px; color: white;">
-                    <li>Email: marina_akhter@hotmail.com</li>
-                    <li>Instagram: marina96_designs</li>
-                    <li>Linkedin: https://www.linkedin.com/in/marina-akhter-474584165/</li>
-                </ul>
+                <h4 style="font-size: 40px; margin-left: 30px; margin-right: 35px; margin-top: 30px; color: black;">Services</h4>
+                <div style="font-size: 18px; margin-left: 30px; margin-right: 70px; line-height: 35px; color: black;">
+                    <ul>
+                        <li>Advertisement Design</li>
+                        <li>App/Icon Design</li>
+                        <li>Bad/Tote Design</li>
+                        <li>Brochure Design</li>
+                        <li>Business Card Design</li>
+                        <li>Cup/Mug Design</li>
+                        <li>Illustrations</li>
+                        <li>Infographic Design</li>
+                        <li>Label Design</li>
+                        <li>Logo Design</li>
+                        <li>Packaging Design</li>
+                        <li>Photoshop Design</li>
+                        <li>Powerpoint Design</li>
+                        <li>Social Media Post</li>
+                        <li>Sticker Design</li>
+                        <li>T-shirt Design</li>
+                        <li>Website Design</li>
+                    </ul>
+                </div>
             </div>
         </div>
     </div>  
 </body>
-<footer></footer>
+<footer>
+    <div class="d-flex flex-row bd-highlight mb-3 d-flex justify-content-between">
+        <div class="p-2 bd-highlight" style="color: white; line-height: 35px;">
+            <h4>Contact Info:</h4>
+                <ul>
+                    <li>Email: marina_akhter@hotmail.com</li>
+                    <li>Instagram: marina96_designs</li>
+                    <li>Linkedin: https://www.linkedin.com/in/marina-akhter-474584165/</li>
+                </ul>
+        </div>
+        <div class="p-2 bd-highlight" style="color: white; line-height: 35px; margin-right: 200px;">
+            <h4>Site</h4>
+                <ul>
+                    <li>Home</li>
+                    <li>Profile</li>
+                    <li>Resume</li>
+                </ul>
+        </div>
+    </div>
+</footer>
 <div class="preloader">
     <img src="Graphic Design/Newlogo-13.png" class="loading">
 </div>
