--- a/uxui.html
+++ b/uxui.html
@@ -43,40 +43,45 @@
     </div>
   </nav>
 
-<div class="background">
+  <div class="background">
     <div class="background2">
       <div style="display: flex; justify-content: space-evenly; padding: 20px; margin-top: 35px;">
         <a href="index.html"><img src="img/Buttonlogo-12.png" style="width: 120px; margin: 5px;" class="zoom"></a>
-        <a href="uxui.html"><img src="img/Buttonlogo-13.png" style="width: 120px; margin: 5px;"></a>
+        <a href="uxui.html"><img src="img/Buttonlogo-13.png" style="width: 120px; margin: 5px;" class="active2"></a>
         <a href="#"><img src="Graphic Design/BrandIdentitybutton-23.png" style="width: 120px; margin: 5px;" class="zoom"></a>
         <a href="#"><img src="Graphic Design/ProductDesignbutton-24.png" style="width: 120px; margin: 5px;" class="zoom"></a>
-    </div>
+      </div>
 
-        <div class="cards1">
-          <div class="card-deck w-50 h-100">
-              <div class="card" style="border: black solid 3px; margin-top: 15px; margin-bottom: 15px;">
-                  <img src="Graphic Design/WDPlogo-24.jpg" class="card-img-top" alt="...">
-                  <div class="card-body" style="background-color: black;">
-                      <h5 class="card-title" style="text-align: center;"><a href="case1.html" style="color: white; font-size: 16px;">Workers Defense Project Redesign</a></h5>
-                  </div>
-              </div>
-          </div>
-        </div>
-
-        <div class="cards2">
-          <div class="card-deck w-50 h-100">
-            <div class="card" style="border: black solid 3px; margin-top: 15px; margin-bottom: 15px;">
-                <img src="Graphic Design/RRLogo-05.jpg" class="card-img-top" alt="...">
-                <div class="card-body" style="background-color: black;">
-                    <h5 class="card-title" style="text-align: center;"><a href="#" style="color: white; font-size: 16px;">Recipe Roulette</a></h5>
-                </div>
-            </div>
-          </div>
-          </div>
+      <div style="display: flex; flex-direction: row; justify-content: space-around;">
+        <img src="ux.ui/WDPbutton-30.png" style="width: 250px; height: 250px; margin: 30px;" class="zoom2">
+        <img src="ux.ui/RRbutton-29.png" style="width: 250px; height: 250px; margin: 30px;" class="zoom2">
+      </div>
     </div>
-</div>
+  </div>
+  
 </body>
-<footer></footer>
+
+<footer>
+  <div class="d-flex flex-row bd-highlight mb-3 d-flex justify-content-between">
+      <div class="p-2 bd-highlight" style="color: white; line-height: 35px;">
+          <h4>Contact Info:</h4>
+              <ul>
+                  <li>Email: marina_akhter@hotmail.com</li>
+                  <li>Instagram: marina96_designs</li>
+                  <li>Linkedin: https://www.linkedin.com/in/marina-akhter-474584165/</li>
+              </ul>
+      </div>
+      <div class="p-2 bd-highlight" style="color: white; line-height: 35px; margin-right: 200px;">
+        <h4>Site</h4>
+            <ul>
+                <li>Home</li>
+                <li>Profile</li>
+                <li>Resume</li>
+            </ul>
+      </div>
+  </div>
+</footer>
+
 <div class="preloader">
     <img src="Graphic Design/Newlogo-13.png" class="loading">
 </div>
