--- a/thesis.html
+++ b/thesis.html
@@ -167,7 +167,27 @@
         </div>
     </div>    
 </body>
-<footer></footer>
+<footer>
+    <div class="d-flex flex-row bd-highlight mb-3 d-flex justify-content-between">
+        <div class="p-2 bd-highlight" style="color: white; line-height: 35px;">
+            <h4>Contact Info:</h4>
+                <ul>
+                    <li>Email: marina_akhter@hotmail.com</li>
+                    <li>Instagram: marina96_designs</li>
+                    <li>Linkedin: https://www.linkedin.com/in/marina-akhter-474584165/</li>
+                </ul>
+        </div>
+
+        <div class="p-2 bd-highlight" style="color: white; line-height: 35px; margin-right: 200px;">
+            <h4>Site</h4>
+                <ul>
+                    <li>Home</li>
+                    <li>Profile</li>
+                    <li>Resume</li>
+                </ul>
+        </div>
+    </div>
+</footer>
 <div class="preloader">
     <img src="Graphic Design/Newlogo-13.png" class="loading">
 </div>
