--- a/index.html
+++ b/index.html
@@ -61,21 +61,19 @@
             </div>
 
             <div style="display: flex; flex-direction: row; justify-content: space-around;">
-                <!--<a href="thesis.html"><img src="Graphic Design/portfoliobutton-18.png" style="width: 250px; height: 250px; margin: 20px;" class="zoom2"></a>-->
-                <img src="Graphic Design/BigEventbutton-28.png" style="width: 250px; height: 250px; margin: 30px;" class="zoom2">
-                <img src="Graphic Design/hazingpreventionbutton.png" style="width: 250px; height: 250px; margin: 30px;" class="zoom2">
+                <img src="Graphic Design/BigEventbutton-28.png" style="width: 250px; height: 250px; margin: 30px; display: flex;" class="zoom2">
+                <img src="Graphic Design/hazingpreventionbutton.png" style="width: 250px; height: 250px; margin: 30px; display: flex;" class="zoom2">
             </div>
 
             <div style="display: flex; flex-direction: row; justify-content: space-around;">
-                <img src="Graphic Design/SSRbutton-27.png" style="width: 250px; height: 250px; margin: 30px;" class="zoom2">
-                <img src="Graphic Design/sgabutton.png" style="width: 250px; height: 250px; margin: 30px;" class="zoom2">
+                <img src="Graphic Design/SSRbutton-27.png" style="width: 250px; height: 250px; margin: 30px; display: flex;" class="zoom2">
+                <img src="Graphic Design/sgabutton.png" style="width: 250px; height: 250px; margin: 30px; display: flex;" class="zoom2">
             </div>
 
             <div style="display: flex; flex-direction: row; justify-content: space-around;">
-                <img src="Graphic Design/environmentposterbutton.png" style="width: 250px; height: 250px; margin: 30px;" class="zoom2">
-                <img src="Graphic Design/logobutton.png" style="width: 250px; height: 250px; margin: 30px;" class="zoom2">
+                <img src="Graphic Design/environmentposterbutton.png" style="width: 250px; height: 250px; margin: 30px; display: flex;" class="zoom2">
+                <img src="Graphic Design/logobutton.png" style="width: 250px; height: 250px; margin: 30px; display: flex;" class="zoom2">
             </div>
-
         </div>
     </div>
 </body>
