--- a/uxui.html
+++ b/uxui.html
@@ -13,7 +13,6 @@
 </head>
 
 <body>
-
   <div class="background3">
     <div class="mainheader">
         <a class="logo" href="#"><img src="Graphic Design/Newlogo2-07.png" class="logo"></a>
@@ -53,7 +52,7 @@
       </div>
 
       <div style="display: flex; flex-direction: row; justify-content: space-around;">
-        <img src="ux.ui/WDPbutton-30.png" style="width: 250px; height: 250px; margin: 30px;" class="zoom2">
+        <a href="wdp.html"><img src="ux.ui/WDPbutton-30.png" style="width: 250px; height: 250px; margin: 30px;" class="zoom2"></a>
         <img src="ux.ui/RRbutton-29.png" style="width: 250px; height: 250px; margin: 30px;" class="zoom2">
       </div>
     </div>
