--- a/uxui.html
+++ b/uxui.html
@@ -46,9 +46,9 @@
     <div class="background2">
       <div style="display: flex; justify-content: space-evenly; padding: 20px; margin-top: 35px;">
         <a href="index.html"><img src="img/Buttonlogo-12.png" style="width: 120px; margin: 5px;" class="zoom"></a>
-        <a href="uxui.html"><img src="img/Buttonlogo-13.png" style="width: 120px; margin: 5px;" class="active2"></a>
-        <a href="#"><img src="Graphic Design/BrandIdentitybutton-23.png" style="width: 120px; margin: 5px;" class="zoom"></a>
-        <a href="#"><img src="Graphic Design/ProductDesignbutton-24.png" style="width: 120px; margin: 5px;" class="zoom"></a>
+        <a href="#"><img src="img/Buttonlogo-13.png" style="width: 120px; margin: 5px;" class="active2"></a>
+        <a href="brand.html"><img src="Graphic Design/BrandIdentitybutton-23.png" style="width: 120px; margin: 5px;" class="zoom"></a>
+        <a href="product.html"><img src="Graphic Design/ProductDesignbutton-24.png" style="width: 120px; margin: 5px;" class="zoom"></a>
       </div>
 
       <div style="display: flex; flex-direction: row; justify-content: space-around;">
