--- a/wdp.html
+++ b/wdp.html
@@ -97,7 +97,7 @@
                     <div class="card" style="width: 20rem;">
                         <img src="wdp/ProtoPersona1.jpg" class="card-img-top" alt="...">
                         <div class="card-body">
-                            <p class="card-text text2">Proto-Persona 1</p>
+                            <p class="card-text" style="font-size: 20px; font-weight: bold; margin-left: 70px;">Proto-Persona 1</p>
                         </div>
                     </div>
                 </div>
@@ -106,7 +106,7 @@
                     <div class="card" style="width: 23rem;">
                         <img src="wdp/ProtoPersona2.jpg" class="card-img-top" alt="...">
                         <div class="card-body">
-                            <p class="card-text text2">Proto-Persona 2</p>
+                            <p class="card-text" style="font-size: 20px; font-weight: bold; margin-left: 90px;">Proto-Persona 2</p>
                         </div>
                     </div>
                 </div>
