--- a/index.html
+++ b/index.html
@@ -54,20 +54,20 @@
     <div class="background" style="display: flex; flex-direction: column;">
         <div class="background2" style="display: flex; flex-direction: column;">
             <div style="display: flex; justify-content: space-evenly; padding: 20px; margin-top: 35px;">
-                <a href="index.html"><img src="img/Buttonlogo-12.png" style="width: 120px; margin: 5px;" class="active2"></a>
+                <a href="#"><img src="img/Buttonlogo-12.png" style="width: 120px; margin: 5px;" class="active2"></a>
                 <a href="uxui.html"><img src="img/Buttonlogo-13.png" style="width: 120px; margin: 5px;" class="zoom"></a>
-                <a href="#"><img src="Graphic Design/BrandIdentitybutton-23.png" style="width: 120px; margin: 5px;" class="zoom"></a>
-                <a href="#"><img src="Graphic Design/ProductDesignbutton-24.png" style="width: 120px; margin: 5px;" class="zoom"></a>
+                <a href="brand.html"><img src="Graphic Design/BrandIdentitybutton-23.png" style="width: 120px; margin: 5px;" class="zoom"></a>
+                <a href="product.html"><img src="Graphic Design/ProductDesignbutton-24.png" style="width: 120px; margin: 5px;" class="zoom"></a>
             </div>
 
             <div style="display: flex; flex-direction: row; justify-content: space-around;">
-                <img src="Graphic Design/BigEventbutton-28.png" style="width: 250px; height: 250px; margin: 30px; display: flex;" class="zoom2">
-                <img src="Graphic Design/hazingpreventionbutton.png" style="width: 250px; height: 250px; margin: 30px; display: flex;" class="zoom2">
+                <a href="tbe.html"><img src="Graphic Design/BigEventbutton-28.png" style="width: 250px; height: 250px; margin: 30px; display: flex;" class="zoom2"></a>
+                <a href="hp.html"><img src="Graphic Design/hazingpreventionbutton.png" style="width: 250px; height: 250px; margin: 30px; display: flex;" class="zoom2"></a>
             </div>
 
             <div style="display: flex; flex-direction: row; justify-content: space-around;">
-                <img src="Graphic Design/SSRbutton-27.png" style="width: 250px; height: 250px; margin: 30px; display: flex;" class="zoom2">
-                <img src="Graphic Design/sgabutton.png" style="width: 250px; height: 250px; margin: 30px; display: flex;" class="zoom2">
+                <a href="df.html"><img src="Graphic Design/SSRbutton-27.png" style="width: 250px; height: 250px; margin: 30px; display: flex;" class="zoom2"></a>
+                <a href="sga.html"><img src="Graphic Design/sgabutton.png" style="width: 250px; height: 250px; margin: 30px; display: flex;" class="zoom2"></a>
             </div>
 
             <div style="display: flex; flex-direction: row; justify-content: space-around;">
