--- a/ep.html
+++ b/ep.html
@@ -54,25 +54,29 @@
     <div class="background" style="display: flex; flex-direction: column;">
         <div class="background2" style="display: flex; flex-direction: column;">
             <div style="display: flex; justify-content: space-evenly; padding: 20px; margin-top: 35px;">
-                <a href="#"><img src="img/Buttonlogo-12.png" style="width: 120px; margin: 5px;" class="active2"></a>
-                <a href="uxui.html"><img src="img/Buttonlogo-13.png" style="width: 120px; margin: 5px;" class="zoom"></a>
-                <a href="brand.html"><img src="Graphic Design/BrandIdentitybutton-23.png" style="width: 120px; margin: 5px;" class="zoom"></a>
-                <a href="product.html"><img src="Graphic Design/ProductDesignbutton-24.png" style="width: 120px; margin: 5px;" class="zoom"></a>
+                <a href="index.html"><img src="Graphic Design/Backbutton-16.png" style="width: 120px;" class="zoom"></a>
             </div>
 
-            <div style="display: flex; flex-direction: row; justify-content: space-around;">
-                <a href="tbe.html"><img src="Graphic Design/BigEventbutton-28.png" style="width: 250px; height: 250px; margin: 30px; display: flex;" class="zoom2"></a>
-                <a href="hp.html"><img src="Graphic Design/hazingpreventionbutton.png" style="width: 250px; height: 250px; margin: 30px; display: flex;" class="zoom2"></a>
-            </div>
+            <div style="background-color: #659157;">
+                <h2 style="text-align: center; font-size: 100px; color: white; margin-top: 15px; font-family: Avenir;">Environmental Posters</h2>
+                <div class="d-flex justify-content-center align-items-end">
+                    <div class="d-flex flex-column bd-highlight justify-content-center">
+                        <div class="p-2 bd-highlight"><img src="Graphic Design/pictogram II-07.jpg" class="rounded mx-auto d-block" width="350px" height="500px"></div>
+                        <div class="p-2 bd-highlight" style="color: white; font-weight: bold;">Planning Stage</div>
+                    </div>
+                </div>
 
-            <div style="display: flex; flex-direction: row; justify-content: space-around;">
-                <a href="df.html"><img src="Graphic Design/SSRbutton-27.png" style="width: 250px; height: 250px; margin: 30px; display: flex;" class="zoom2"></a>
-                <a href="sga.html"><img src="Graphic Design/sgabutton.png" style="width: 250px; height: 250px; margin: 30px; display: flex;" class="zoom2"></a>
-            </div>
+                <div class="d-flex justify-content-around align-items-end">
+                    <div class="d-flex flex-column bd-highlight justify-content-center">
+                        <div class="p-2 bd-highlight"><img src="Graphic Design/Environment poster 1-2.jpg" class="rounded mx-auto d-block" width="450px" height="730px"></div>
+                        <div class="p-2 bd-highlight" style="color: white; font-weight: bold;">Poster 1</div>
+                    </div>
 
-            <div style="display: flex; flex-direction: row; justify-content: space-around;">
-                <a href="ep.html"><img src="Graphic Design/environmentposterbutton.png" style="width: 250px; height: 250px; margin: 30px; display: flex;" class="zoom2"></a>
-                <img src="Graphic Design/logobutton.png" style="width: 250px; height: 250px; margin: 30px; display: flex;" class="zoom2">
+                    <div class="d-flex flex-column bd-highlight justify-content-center">
+                        <div class="p-2 bd-highlight"><img src="Graphic Design/Environment Poster 2-01.jpg" class="rounded mx-auto d-block" width="450px" height="730px"></div>
+                        <div class="p-2 bd-highlight" style="color: white; font-weight: bold;">Poster 2</div>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
