--- a/profile.html
+++ b/profile.html
@@ -53,7 +53,7 @@
                     <ul>
                         <li>Advertisement Design</li>
                         <li>App/Icon Design</li>
-                        <li>Bad/Tote Design</li>
+                        <li>Bag/Tote Design</li>
                         <li>Brochure Design</li>
                         <li>Business Card Design</li>
                         <li>Cup/Mug Design</li>
